[gd_scene load_steps=5 format=3 uid="uid://ddrkuks32yy0t"]

[ext_resource type="FontFile" uid="uid://c7r7x7h6jh0uq" path="res://assets/fonts/kenvector_future.ttf" id="1_bioho"]
[ext_resource type="Script" path="res://scripts/Menus/GameCompleteMenu.gd" id="1_j358e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qac6y"]
bg_color = Color(0.513726, 0.596078, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77t04"]
bg_color = Color(0.329412, 0.572549, 0.945098, 1)

[node name="GameCompleteMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j358e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="LevelCompleteLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_bioho")
theme_override_font_sizes/font_size = 45
text = "Level complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bioho")
theme_override_font_sizes/font_size = 30
text = "Current time: 00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bioho")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_qac6y")
theme_override_styles/hover = SubResource("StyleBoxFlat_77t04")
text = "Restart"

[node name="Control3" type="Control" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bioho")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_qac6y")
theme_override_styles/hover = SubResource("StyleBoxFlat_77t04")
text = "Exit to main menu"
